plugins {
    id 'java'
    id 'idea'
    id 'org.openjfx.javafxplugin' version '0.0.5'
}

group 'com.github.kostrovik'
version '2.0.0'
def moduleName = 'kernel'

sourceCompatibility = 11
targetCompatibility = 11
compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

repositories {
    maven { url 'https://jitpack.io' }
    jcenter()
    mavenCentral()
}

javafx {
    version = "11.0.+"
    modules = [
            'javafx.controls',
            'javafx.graphics'
    ]
}

dependencies {
    testCompile("org.junit.jupiter:junit-jupiter-api:5.3.2")
    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.3.2")

    compile files('libs/jackson-annotations-2.9.0.jar')
    compile files('libs/jackson-core-2.9.6.jar')
    compile files('libs/jackson-databind-2.9.6.jar')
    compile files('libs/jackson-dataformat-yaml-2.9.2.jar')
    compile files('libs/snakeyaml-1.18.jar')
    implementation 'com.github.kostrovik:useful-utils:1.1.1'
}

test {
    useJUnitPlatform {
        includeEngines 'junit-jupiter'
    }

    testLogging {
        events 'PASSED', 'FAILED', 'SKIPPED'
    }

    afterSuite { desc, result ->
        if (!desc.parent) {
            println "\nTest result: ${result.resultType}"
            println "Test summary: ${result.testCount} tests, " +
                    "${result.successfulTestCount} succeeded, " +
                    "${result.failedTestCount} failed, " +
                    "${result.skippedTestCount} skipped"
        }
    }
}

idea {
    module {
        inheritOutputDirs = true
    }
}

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}